Changing the design definition of site

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,2 +1,10 @@
 - name: Staff
   link: /staff.html
+- name: Blog
+  link: /blog/
+- name: Work
+  link: /work/
+- name: About
+  link: /about/
+- name: Home
+  link: /
